bug and spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ body.black {
 img {
 	width: 100%;
 	height: 100%;
-	padding: .5em;
 }
 
 img.where {
@@ -101,6 +100,7 @@ img.piclink {
 }
 
 img.navlink {
+	padding: 0;
 }
 
 a:link {
